Adding script to production stage in the job sequence

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,3 +12,4 @@ jobs:
         - stage: staging
           script: bash staging-script.sh
         - stage: production
+          script: ./prod-script.sh
