Checking to see if before-install is being execeuted

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ sudo: required
 services:
     - docker
 before-install:
+    - echo "hello"
     - docker build -t hello-docker .
     - docker ps -a
     - docker run hello-docker
