Moved before-install commands to script

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,13 +4,12 @@ python:
 sudo: required
 services:
     - docker
-before-install:
+install: pip install -r requirements.txt
+script:
     - echo "hello"
     - docker build -t hello-docker .
     - docker ps -a
     - docker run hello-docker
-install: pip install -r requirements.txt
-script: python tests.py
 # jobs:
 #     include:
 #         - stage: development
