--- a/.travis.yml
+++ b/.travis.yml
@@ -4,10 +4,11 @@ python:
 sudo: required
 services:
     - docker
-before-install: echo "hello"
-    # - docker build -t hello-docker .
-    # - docker ps -a
-    # - docker run hello-docker
+before_install:
+    - echo "hello"
+    - docker build -t hello-docker .
+    - docker ps -a
+    - docker run hello-docker
 install: pip install -r requirements.txt
 script: python tests.py
 # jobs:
