--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: python
 python:
     - "2.7"
 install: pip install -r requirements.txt
-script: python hello.py
+script: python tests.py
 deploy:
   provider: pages
   skip_cleanup: true
